Bug 1354245 - Don't call CaptivePortalService::Start() in SetConnectivityInternal if the captive portal service is disabled via pref. r=mcmanus, a=jcristau

MozReview-Commit-ID: 4xCkBgWDZ2b

--HG--
extra : source : f5616b65b694d3224fbac2259cac1df0063c75ac